# awesome-py-libp2p-examples

./: .gitignore  README.md
Collaborative-whiteboard/: README.md  config.py  main.py  node.py  requirements.txt  sync_protocol.py  whiteboard_crdt.py  ws_bridge.py
Collaborative-whiteboard/static/: index.html
chat-reputation/: README.md  chat_client.py  chat_reputation.py  config.py  main.py  network.py  reputation_system.py  requirements.txt
collaborative-notepad/: .gitignore  README.md  config.py  crdt.py  document_store.py  main.py  notepad_backend.py  requirements.txt
collaborative-notepad/static/: app.js  index.html  style.css
dht-messaging/: __init__.py  chat.py  demo.py  kademlia.py  main.py  pair.py  peer.py
dht_messaging/: chat.py  dht_node.py  dhtd.py  main.py  quick_start.sh  requirements.txt
p2p-model checking/: .env.example  README.md  demo_weights.py  manual_test.py  pyproject.toml
p2p-model checking/p2p_ipfs_federated/: __init__.py  coordinator.py  ipfs_utils.py  logs.py  persistence.py  runner.py
p2p-model checking/tests/: test_integration.py
